<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="Cari komik..."
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/main_content_layout" 
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:layout_marginBottom="8dp" 
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view" 
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rekomendasi_untukmu"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rekomendasi_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terbaru_season_ini"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/terbaru2_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lanjutkan_membaca"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pustaka_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/komik_berwarna"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/berwarna_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/komik_terpopuler"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/komik_populer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view" 
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_bottom_nav_floating"
        android:elevation="8dp"
        app:itemIconTint="@color/bottom_nav_item_color_selector" 
        app:itemTextColor="@color/bottom_nav_item_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
